tree-sitter-souffle/grammar.js
        source_file: ($) => repeat($._element),
        _element: ($) =>
            choice(
                $.directive,
                $.include_directive,
                $.relation_decl,
                $.rule,
                $.fact,
                $.type_decl,
                $.deprecated_type_decl,
                $.functor_decl,
                $.component_decl,
                $.component_init,
                $.preproc_directive,
                $.pragma,
            ),
        relation_decl: ($) =>
            seq(
                $.decl_kw,
                field("name", commaSep1($.identifier)),
                "(",
                optional(commaSep1($.attribute)),
                ")",
                repeat($.relation_qualifier),
                optional($.choice_domain),
            ),
        relation_qualifier: (_) =>
            choice(
                "eqrel",
                "btree",
                "btree_delete",
                "brie",
                "no_magic",
                "magic",
                "no_inline",
                "inline",
                "override",
                "overridable",
                // legacy syntax
                "input",
                "output",
                "printsize",
            ),
        choice_domain: ($) =>
            seq("choice-domain", commaSep1($.choice_domain_attribute)),
        choice_domain_attribute: ($) =>
            choice(
                alias($.identifier, $.choice_domain_single_attribute),
                $.choice_domain_tuple_attribute,
            ),
        choice_domain_tuple_attribute: ($) =>
            seq("(", commaSep1($.identifier), ")"),
        rule: ($) =>
            seq(
                field("head", choice($.rule_head, $.subsumption_head)),
                ":-",
                field("body", $.disjunction),
                ".",
                optional($.query_plan),
            ),
        rule_head: ($) => commaSep1($.atom),
        subsumption_head: ($) =>
            seq(field("first", $.atom), "<=", field("second", $.atom)),
        disjunction: ($) => sep1($.conjunction, ";"),
        conjunction: ($) => commaSep1($.conjunction_clause),
        conjunction_clause: ($) =>
            seq(
                alias(repeat("!"), $.neg),
                choice($.atom, $.constraint, seq("(", $.disjunction, ")")),
            ),
        constraint: ($) =>
            choice(
                $.binary_constraint,
                $.boolean_literal,
                // TODO: match and contains
            ),
        binary_constraint: ($) =>
            seq(
                field("lhs", $.argument),
                field("op", choice("<", ">", "<=", ">=", "=", "!=")),
                field("rhs", $.argument),
            ),
        qualified_name: ($) => sep1($.identifier, "."),
        argument: ($) =>
            choice(
                $.constant,
                $.variable,
                alias("nil", $.nil),
                $.record_init,
                $.branch_init,
                $.unary_operation,
                $.binary_operation,
                $.type_conversion,
                $.aggregator,
                $.range_expression,
                $.functor_invocation,
                $.paren_argument,
            ),
        constant: ($) => choice($.string_literal, $._number),
        variable: ($) => choice($.identifier, "_"),
        attribute: ($) =>
            seq(field("name", $.identifier), ":", field("type", $.type_name)),
        type_decl: ($) =>
            seq(
                $.type_kw,
                field("name", $.identifier),
                optional(choice($.subtype_decl, $.eq_type_decl)),
            ),
        subtype_decl: ($) => seq(field("type_relation_op", "<:"), $.type_name),
        eq_type_decl: ($) =>
            seq(
                field("type_relation_op", "="),
                choice(
                    $.union_type,
                    $.type_name,
                    $.record_type,
                    $.abstract_data_type,
                ),
            ),
        union_type: ($) => prec(2, sep2($.type_name, "|")),
        type_name: ($) =>
            choice(
                $.primitive_type,
                alias($.qualified_name, $.user_defined_type_name),
            ),
        record_type: ($) => seq("[", optional(commaSep1($.attribute)), "]"),
        abstract_data_type: ($) => sep1($.adt_branch, "|"),
        adt_branch: ($) =>
            seq($.identifier, "{", optional(commaSep1($.attribute)), "}"),
        primitive_type: (_) => choice("number", "symbol", "unsigned", "float"),
        atom: ($) =>
            seq(
                field("name", $.qualified_name),
                "(",
                field("args", optional(commaSep1($.argument))),
                ")",
            ),
        identifier: (_) => /[\?a-zA-Z_][\?a-zA-Z0-9_]*/,
        decimal: (_) => /[0-9]+/,
        _number: ($) => choice($._integer, $.float),
    },
});

function commaSep1(rule) {
    return sep1(rule, ",");
}

function sep2(rule, separator) {
    return seq(rule, separator, rule, repeat(seq(separator, rule)));
}

function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
