tree-sitter-souffle/test/corpus/relation_decl/no_argument.txt
================================================================================
relation without arguments
================================================================================

.decl A()
A() :- B(42).

--------------------------------------------------------------------------------

(source_file
  (relation_decl
    (decl_kw)
    (identifier))
  (rule
    (rule_head
      (atom
        (qualified_name
          (identifier))))
    (disjunction
      (conjunction
        (conjunction_clause
          (atom
            (qualified_name
              (identifier))
            (argument
              (constant
                (decimal)))))))))
