tree-sitter-souffle/test/corpus/type_decl/subtype_decl.txt
====================================
type decl: simple subtype
====================================

.type myEvenNumber <: number

---

(source_file
  (type_decl
    (type_kw)
    (identifier)
    (subtype_decl
      (type_name
        (primitive_type)))))
